
next
----
- "sounds:play" now returns handle & sound file name string
- added "sounds:stop" wrapper function for "core:sound_stop"
- added setting "sounds.enable_tests"
- added sounds testing formspec shown with "/sounds_tests" chat command
- added sounds:
	- ar_fire
	- fireball
	- laser
	- pistol_cock
	- pistol_fire
	- pistol_fire_dry
	- pistol_reload
	- ricochet
	- rifle_cock
	- rifle_fire
	- rifle_fire_cock
	- rifle_fire_dry
	- rifle_small_fire
	- shotgun_fire_pump
	- shotgun_pump


v1.8
----
- strings can be added to SoundGroup via arithmetic operator
- added sounds:
	- chalk_screech
	- chalk_write
	- compressor_motor
	- motorbike_idle
	- tree_creak
	- vehicle_horn


v1.7
----
- added sounds:
	- airplane_prop
	- car_motor
	- jet_ambience
	- jet_flyby
	- jet_land
	- train_whistle
	- zombie_death


v1.6
----
- added sounds:
	- door_close_02
	- door_close_03
	- door_knock
	- door_open
	- doorbell
	- fire_crackle
	- leaves
	- match_ignite
	- tool_break
	- vehicle_motor_idle
	- vomit
	- woodpecker_peck
	- woosh


v1.5
----
- added sounds:
	- balloon_inflate
	- balloon_pop
	- bicycle_bell
	- bicycle_horn
	- bicycle_spokes
	- cobra
	- dolphin_chirp
	- dolphin_click
	- door_close
	- door_creak
	- goose
	- lamb
	- laugh_evil
	- lava_cool
	- leopard (many)
	- raccoon_chatter
	- rain_heavy
	- rain_light
	- rain_medium
	- sea_lion
	- seagull
	- seagulls
	- snake_rattle
	- squirrel
	- thunder
	- whale
	- wind
- renamed sounds:
	- sheep -> sheep_baa


v1.4
----
- added sounds:
	- bat
	- bear
	- camel
	- canary
	- cricket
	- giraffe_hum
	- gorilla_grunt
	- gorilla_roar
	- gorilla_snarl
	- monkey
	- parrot
	- parrot_chirp
	- parrot_whistle
	- peacock_02
	- penguin
	- pig_snort
	- pig_squeal
	- puppy_bark
	- toucan
	- turkey_gobble
- renamed sounds:
	- elephant -> elephant_trumpet


v1.3
----
- pencil sounds split into "pencil_erase" & "pencil_write" groups
- fixed arithmetic operations on SoundGroup
- renamed node sound files
- SoundGroup:play returns handle or nil only