@@ -1,0 +1,17 @@
+# textdomain:sounds
+
+# Translators:
+
+
+Displays sounds tests formspec.=
+Sounds Tests=
+Name: @1=
+Cached: @1=
+Played: @1=
+Manual play:=
+Group play:=
+Play=
+Stop=
+Loop=
+yes=
+no=
