@@ -5,6 +5,7 @@ next
 - added "sounds:stop" wrapper function for "core:sound_stop"
 - added setting "sounds.enable_tests"
 - added sounds testing formspec shown with "/sounds_tests" chat command
+- added localization support for sounds testing formspec
 - added sounds:
 	- ar_fire
 	- fireball
